pkg/kgateway/translator/gateway/testutils/inputs/status/basic.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-1
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - name: rule0
    backendRefs:
    - name: example-svc
      port: 80
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.kgateway.dev
        kind: TrafficPolicy
        name: extensionref-policy
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-2
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example2.com"
  rules:
  - name: rule0
    backendRefs:
    - name: example-svc
      port: 80
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.kgateway.dev
        kind: TrafficPolicy
        name: policy-no-merge        
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-3
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example3.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /not-found
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.kgateway.dev
        kind: DirectResponse
        name: not-found-response
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
